--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 "sameAs": null
             }</script>
         <!-- end SEO -->
-        <link href="https://larayang.github.io/feed.xml" type="application/atom+xml" rel="alternate" title="Lara Yang Feed">
+        <link href="https://msingell.github.io/feed.xml" type="application/atom+xml" rel="alternate" title="Lara Yang Feed">
         <!-- http://t.co/dKP3o1e -->
         <meta name="HandheldFriendly" content="True">
         <meta name="MobileOptimized" content="320">
@@ -28,30 +28,30 @@
             document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
         </script>
         <!-- For all browsers -->
-        <link rel="stylesheet" href="https://larayang.github.io/assets/css/main.css">
+        <link rel="stylesheet" href="https://msingell.github.io/assets/css/main.css">
         <meta http-equiv="cleartype" content="on">
         <!-- start custom head snippets -->
-        <link rel="apple-touch-icon" sizes="57x57" href="https://larayang.github.io/images/apple-touch-icon-57x57.png?v=M44lzPylqQ">
-        <link rel="apple-touch-icon" sizes="60x60" href="https://larayang.github.io/images/apple-touch-icon-60x60.png?v=M44lzPylqQ">
-        <link rel="apple-touch-icon" sizes="72x72" href="https://larayang.github.io/images/apple-touch-icon-72x72.png?v=M44lzPylqQ">
-        <link rel="apple-touch-icon" sizes="76x76" href="https://larayang.github.io/images/apple-touch-icon-76x76.png?v=M44lzPylqQ">
-        <link rel="apple-touch-icon" sizes="114x114" href="https://larayang.github.io/images/apple-touch-icon-114x114.png?v=M44lzPylqQ">
-        <link rel="apple-touch-icon" sizes="120x120" href="https://larayang.github.io/images/apple-touch-icon-120x120.png?v=M44lzPylqQ">
-        <link rel="apple-touch-icon" sizes="144x144" href="https://larayang.github.io/images/apple-touch-icon-144x144.png?v=M44lzPylqQ">
-        <link rel="apple-touch-icon" sizes="152x152" href="https://larayang.github.io/images/apple-touch-icon-152x152.png?v=M44lzPylqQ">
-        <link rel="apple-touch-icon" sizes="180x180" href="https://larayang.github.io/images/apple-touch-icon-180x180.png?v=M44lzPylqQ">
-        <link rel="icon" type="image/png" href="https://larayang.github.io/images/favicon-32x32.png?v=M44lzPylqQ" sizes="32x32">
-        <link rel="icon" type="image/png" href="https://larayang.github.io/images/android-chrome-192x192.png?v=M44lzPylqQ" sizes="192x192">
-        <link rel="icon" type="image/png" href="https://larayang.github.io/images/favicon-96x96.png?v=M44lzPylqQ" sizes="96x96">
-        <link rel="icon" type="image/png" href="https://larayang.github.io/images/favicon-16x16.png?v=M44lzPylqQ" sizes="16x16">
-        <link rel="manifest" href="https://larayang.github.io/images/manifest.json?v=M44lzPylqQ">
-        <link rel="mask-icon" href="https://larayang.github.io/images/safari-pinned-tab.svg?v=M44lzPylqQ" color="#000000">
+        <link rel="apple-touch-icon" sizes="57x57" href="https://mhsingell.github.io/images/apple-touch-icon-57x57.png?v=M44lzPylqQ">
+        <link rel="apple-touch-icon" sizes="60x60" href="https://mhsingell.github.io/images/apple-touch-icon-60x60.png?v=M44lzPylqQ">
+        <link rel="apple-touch-icon" sizes="72x72" href="https://mhsingell.github.io/images/apple-touch-icon-72x72.png?v=M44lzPylqQ">
+        <link rel="apple-touch-icon" sizes="76x76" href="https://mhsingell.github.io/images/apple-touch-icon-76x76.png?v=M44lzPylqQ">
+        <link rel="apple-touch-icon" sizes="114x114" href="https://mhsingell.github.io/images/apple-touch-icon-114x114.png?v=M44lzPylqQ">
+        <link rel="apple-touch-icon" sizes="120x120" href="https://mhsingell.github.io/images/apple-touch-icon-120x120.png?v=M44lzPylqQ">
+        <link rel="apple-touch-icon" sizes="144x144" href="https://mhsingell.github.io/images/apple-touch-icon-144x144.png?v=M44lzPylqQ">
+        <link rel="apple-touch-icon" sizes="152x152" href="https://mhsingell.github.io/images/apple-touch-icon-152x152.png?v=M44lzPylqQ">
+        <link rel="apple-touch-icon" sizes="180x180" href="https://mhsingell.github.io/images/apple-touch-icon-180x180.png?v=M44lzPylqQ">
+        <link rel="icon" type="image/png" href="https://mhsingell.github.io/images/favicon-32x32.png?v=M44lzPylqQ" sizes="32x32">
+        <link rel="icon" type="image/png" href="https://mhsingell.github.io/images/android-chrome-192x192.png?v=M44lzPylqQ" sizes="192x192">
+        <link rel="icon" type="image/png" href="https://mhsingell.github.io/images/favicon-96x96.png?v=M44lzPylqQ" sizes="96x96">
+        <link rel="icon" type="image/png" href="https://mhsingell.github.io/images/favicon-16x16.png?v=M44lzPylqQ" sizes="16x16">
+        <link rel="manifest" href="https://mhsingell.github.io/images/manifest.json?v=M44lzPylqQ">
+        <link rel="mask-icon" href="https://mhsingell.github.io/images/safari-pinned-tab.svg?v=M44lzPylqQ" color="#000000">
         <link rel="shortcut icon" href="/images/favicon.ico?v=M44lzPylqQ">
         <meta name="msapplication-TileColor" content="#000000">
-        <meta name="msapplication-TileImage" content="https://larayang.github.io/images/mstile-144x144.png?v=M44lzPylqQ">
-        <meta name="msapplication-config" content="https://larayang.github.io/images/browserconfig.xml?v=M44lzPylqQ">
+        <meta name="msapplication-TileImage" content="https://mhsingell.github.io/images/mstile-144x144.png?v=M44lzPylqQ">
+        <meta name="msapplication-config" content="https://mhsingell.github.io/images/browserconfig.xml?v=M44lzPylqQ">
         <meta name="theme-color" content="#ffffff">
-        <link rel="stylesheet" href="https://larayang.github.io/assets/css/academicons.css"/>
+        <link rel="stylesheet" href="https://mhsingell.github.io/assets/css/academicons.css"/>
         <script type="text/x-mathjax-config">
              MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } });
         </script>
@@ -72,16 +72,16 @@
                         </button>
                         <ul class="visible-links">
                             <li class="masthead__menu-item masthead__menu-item--lg">
-                                <a href="https://larayang.github.io/">Lara Yang</a>
+                                <a href="https://mhsingell.github.io/">Lara Yang</a>
                             </li>
                             <li class="masthead__menu-item">
-                                <a href="https://larayang.github.io/research/">Research</a>
+                                <a href="https://mhsingell.github.io/research/">Research</a>
                             </li>
                             <li class="masthead__menu-item">
-                                <a href="https://larayang.github.io/cv/">CV</a>
+                                <a href="https://mhsingell.github.io/cv/">CV</a>
                             </li>
                             <li class="masthead__menu-item">
-                                <a href="https://larayang.github.io/teaching/">Teaching</a>
+                                <a href="https://mhsingell.github.io/teaching/">Teaching</a>
                             </li>
                         </ul>
                         <ul class="hidden-links hidden"></ul>
@@ -158,7 +158,7 @@
                             <strong>Follow:</strong>
                         </li>
                         <li>
-                            <a href="https://msingell.github.io/feed.xml">
+                            <a href="https://mhsingell.github.io/feed.xml">
                                 <i class="fa fa-fw fa-rss-square" aria-hidden="true"></i>
                                 Feed
                             </a>
@@ -173,7 +173,7 @@
                 </div>
             </footer>
         </div>
-        <script src="https://msingell.github.io/assets/js/main.min.js"></script>
+        <script src="https://mhsingell.github.io/assets/js/main.min.js"></script>
         <script>
             (function(i, s, o, g, r, a, m) {
                 i['GoogleAnalyticsObject'] = r;
