--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 "sameAs": null
             }</script>
         <!-- end SEO -->
-        <link href="https://msingell.github.io/feed.xml" type="application/atom+xml" rel="alternate" title="Lara Yang Feed">
+        <link href="https://msingell.github.io/feed.xml" type="application/atom+xml" rel="alternate" title="Madison Singell Feed">
         <!-- http://t.co/dKP3o1e -->
         <meta name="HandheldFriendly" content="True">
         <meta name="MobileOptimized" content="320">
@@ -72,7 +72,7 @@
                         </button>
                         <ul class="visible-links">
                             <li class="masthead__menu-item masthead__menu-item--lg">
-                                <a href="https://mhsingell.github.io/">Lara Yang</a>
+                                <a href="https://mhsingell.github.io/">Madison Singell</a>
                             </li>
                             <li class="masthead__menu-item">
                                 <a href="https://mhsingell.github.io/research/">Research</a>
@@ -96,7 +96,7 @@
                         <img src="https://mhsingell.github.io/images/profile.jpg" class="author__avatar" alt="Madison Singell">
                     </div>
                     <div class="author__content">
-                        <h3 class="author__name">Lara Yang</h3>
+                        <h3 class="author__name">Madison Singell</h3>
                         <p class="author__bio">PhD Candidate in Macro Organizational Behavior</p>
                     </div>
                     <div class="author__urls-wrapper">
@@ -131,7 +131,7 @@
                     </header>
                     <section class="page__content" itemprop="text">
                         <p>
-                            INSERT MADISON INTRO HERE <a href="https://www.gsb.stanford.edu/programs/phd/academic-experience/students/lara-yang">Stanford Graduate School of Business</a>
+                            INSERT MADISON INTRO HERE <a href="https://www.gsb.stanford.edu/programs/phd/academic-experience/students/madison-singell">Stanford Graduate School of Business</a>
 
                         </p>
                         <p>
@@ -166,7 +166,7 @@
                     </ul>
                 </div>
                 <div class="page__footer-copyright">
-                    &copy;2023 Lara Yang. Powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a>
+                    &copy;2023 Madison Singell. Powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a>
                     &amp;<a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>
                     , a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>
                     .
